--- a/style.css
+++ b/style.css
@@ -1,396 +1,116 @@
-body,
-html {
-  margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Source Sans Pro",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 100%;
-  color: #222;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* Links */
-a {
-  text-decoration: none !important;
-  color: #3173bb !important;
-}
-
-strong {
-  color: #333;
-}
-
-.container {
-  padding: 10px 15px;
-  margin: 0 auto;
-  /* width: 55rem; */
-  max-width: 55rem;
-  background-color: #fff;
-}
-
-.link-title {
-  letter-spacing: 1px;
-  color: #444;
-}
-
-.header {
-  text-align: center;
-  margin-bottom: 1.5rem;
-}
-
-.profile-logo {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-}
-
-.header-title {
-  font-size: 2.4rem;
-  font-weight: 200;
-  letter-spacing: 0.4rem;
-  text-transform: uppercase;
-}
-
-.header-sub-title {
-  font-weight: 400;
-  color: #757575;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-.contact-section {
-  padding-bottom: 0.5rem;
-}
-
-.contact-item {
-  display: flex;
-  align-items: center;
-  color: #3173bb;
-  padding: 0.4rem 0;
-}
-
-.contact-logo {
-  color: #3173bb;
-}
-
-.contact-info {
-  padding-left: 1rem;
-}
-
-.info-section {
-  padding: 1rem 0 0 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.info-left {
-  flex: 1;
-  border-right: 2px solid #f5f5f5;
-  padding-right: 1rem;
-}
-
-.info-right {
-  flex: 3;
-  padding-left: 1rem;
-}
-
-.info-row {
-  width: 100%;
-}
-
-.cat-header {
-  padding: 0.5rem 0;
-  font-size: 1.1rem;
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid #f0f0f0;
-}
-
-.cat-indicator {
-  color: #3173bb;
-}
-
-.cat-title {
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  vertical-align: text-bottom;
-  padding-left: 1rem;
-  color: #666;
-}
-
-.cat-def-body,
-.cat-skill-body {
-  padding: 0.2rem 0px 0.7rem 1.7rem;
-}
-
-/* Lists */
-.cat-list-body {
-  padding-bottom: 1rem;
-}
-.cat-list-body ul {
-  padding-left: 18px;
-  margin: 0;
-  list-style-type: circle;
-}
-
-.cat-list-body li {
-  padding: 0.4rem 0;
-  padding-left: 0.6rem;
-}
-
-/* Education */
-.edu-header,
-.project-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.edu-alma,
-.project-title,
-.skill-title {
-  font-weight: 600;
-  letter-spacing: 1px;
-  padding-right: 60px;
-}
-
-.edu-duration,
-.project-duration {
-  color: #666;
-  font-style: italic;
-}
-
-.edu-class-data {
-  /* clear: right; */
-  margin-top: 5px;
-}
-
-.edu-std {
-  letter-spacing: 0.1rem;
-  color: #666;
-}
-
-.edu-score {
-  margin-left: 20px;
-  padding: 2px 8px;
-  background-color: #3173bb;
-  color: #fff;
-  border-radius: 20px;
-}
-
-/* Project */
-.project-title {
-  padding-right: 5px;
-}
-
-.project-desc {
-  /* margin-top: 8px; */
-  color: #444;
-  padding: 4px 0 4px 16px;
-  border-left: 2px solid beige;
-}
-
-/* Skills */
-.cat-skill-item {
-  padding: 0.2rem 0 !important;
-  padding-left: 0.6rem !important;
-}
-
-.cat-skill-type {
-  /* width: 100%; */
-  /* min-width: 13.5rem; */
-  text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 1px;
-  padding: 5px 0;
-}
-
-.force-inline {
-  display: inline-block !important;
-}
-
-.cat-skill-body {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0 0 5px 40px;
-}
-
-.cat-skill-body-gen {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.skill {
-  margin: 10px 0;
-  padding: 0 10px;
-}
-
-.skill-gen {
-  display: inline;
-  padding: 5px 10px;
-  margin: 3px 6px;
-  margin-left: 0;
-  background-color: #3173bb;
-  color: #fff;
-  border-radius: 3rem;
-
-  /* font-weight: 600; */
-  font-size: 0.9rem;
-}
-
-.skill-progress-track {
-  height: 10px;
-  min-width: 150px;
-  background-color: #eee;
-  margin-top: 6px;
-  border-radius: 6px;
-}
-
-.skill-progress {
-  height: 100%;
-  background-color: #3173bb;
-  border-radius: 6px;
-}
-
-.pad-bottom-extra {
-  padding-bottom: 20px;
-}
-
-.ach-item {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.exp-org {
-  font-weight: 600;
-  letter-spacing: 1px;
-  color: #444;
-}
-
-.exp-title {
-  color: #666;
-}
-
-.ach-title {
-  width: 75%;
-  color: #444;
-}
-
-.ach-duration {
-  color: #666;
-  font-style: italic;
-  width: 15%;
-  text-align: right;
-}
-
-.expDet {
-  list-style-type: disc !important;
-  color: #444;
-  padding: 4px 0 4px 16px;
-  /* font-style: italic; */
-}
-
-.expDet > li {
-  padding: 0.3rem 0 !important;
-  padding-left: 0.3rem !important;
-}
-
-/* Media wuery for mobile view */
-@media screen and (max-width: 500px) {
-  .profile-logo {
-    margin: 0 auto;
-  }
-
-  .header-title {
-    /* flex-wrap: wrap; */
-    /* justify-content: center; */
-    text-align: center;
-  }
-
-  .header-title .profile-contact {
-    text-align: left;
-  }
-
-  .header-sub-title {
-    /* justify-content: center; */
-    text-align: center;
-  }
-
-  .link-title {
-    padding-bottom: 3px;
-    font-weight: 500;
-  }
-
-  .cat-title {
-    letter-spacing: 2px;
-    font-weight: 600;
-  }
-
-  .info-section .info-left {
-    border: none;
-  }
-
-  .info-section .info-right {
+*{
     padding: 0;
-  }
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-  .ach-item {
-    flex-direction: column;
-  }
+/* Write CSS code below */
+.main-content{
+    min-height: 1000px;
+    width: 90%;
+    margin: 20px auto;
+    display: grid;
+    grid-template-rows: 20% 80%;
+    grid-template-columns: 300px 700px;
 
-  .ach-item .ach-title {
-    width: auto;
-  }
+}
+.left-section{
+    grid-area: 1/1/3/2;
+    grid-column: span 1;
+    background-color: rgb(66, 52, 52);
+}
+.right-section{
+    /* grid-area: 1/1/3/2; */
+    grid-column: span 1/ span 2;
+    background-color:gainsboro;
+    
+}
 
-  .ach-item .ach-duration {
-    width: auto;
-    text-align: left;
-  }
-
-  .edu-header {
-    flex-direction: column;
-  }
-
-  .edu-score {
-    margin-left: 0;
-  }
-
-  .contact-item {
-    /* width: 100%; */
+.left-content{
+    padding: 1rem;
+    color: white;
+}
+.profile-image img{
+    margin: auto;
     display: block;
-    cursor: pointer;
-  }
-
-  .contact-icon {
-    min-width: 1.8rem;
+    border: 5px solid white;
+    border-radius: 30%;
+    width: 60%;
+}
+.name{
+    font-size: 1.2rem;
+    font-weight: 700;
     text-align: center;
-  }
+    text-transform: uppercase;
+    letter-spacing: 0.02px;
+    padding: 0.8rem;
+}
+.designation{
+    font-size: 1rem;
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 0.5rem;
+}
+.description{
+    font-size: 0.75rem;
+    text-align: center;
+    padding: 1rem;
+}
 
-  .cat-def-body,
-  .cat-skill-body {
-    padding: 0.5rem 0 0.5rem 1.4rem;
-  }
 
-  .cat-list-body {
-    padding: 2px 0 10px 0px;
-  }
-
-  .cat-skill-body-gen {
+.social-media{
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    /* justify-content: space-between; */
-  }
+    justify-content:space-evenly;
+    list-style-type: none;
+    padding:5px;
+}
+.social-media li{
+    list-style-type: none;
+}
+.social-media li a{
+    text-decoration: none;
+}
 
-  .project-link a {
-    word-wrap: break-word;
-  }
 
-  .project-desc {
-    color: #444;
-    padding: 4px 0;
-  }
+.skills{
+    text-align: center;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+}
+.skill-item{
+    padding: 10px;
+}
+.skill-name{
+    font-size: 0.65rem;
+    text-align: left;
+    padding-bottom: 0.5rem;
+}
+.progress-bar{
+    border: 1px solid white;
+    height: 2px;
+    background-color: black;
+}
+
+
+.right-main-content{
+    padding: 2rem 3rem;
+}
+.right-title{
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    font-weight: 700;
+    padding: 0.5rem;
+    letter-spacing: 1px;
+}
+.para{
+    padding-left: 0.5rem;
+}
+@media screen and (max-width:673px) {
+    .main-content{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
